<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Medical Thermal Imager</string>

    <string name="authentication">Authentication</string>
    <string name="email">Email</string>
    <string name="password">Password</string>


    <!-- CameraActivity -->
    <string name="toggle_more_info">More Info \u21EA</string>
    <string name="toggle_less_info">Less Info \u21B2</string>
    <string name="performTuning">Tune</string>
    <string name="conti_shoot">ContiShoot</string>
    <string name="rotate_on">\u21BA</string>
    <string name="rotate_off">\u21BB</string>
    <string name="battery_label">Batt:</string>
    <string name="txtTuning">Tuning...</string>
    <string name="tools">Tools</string>
    <string name="no_tag">NO TAG</string>
    <string name="single_shoot">Single Shoot</string>
    <string name="conti_shoot_counts">%1$d / %2$d</string>

    <!-- Menu Items: CameraActivity: Tools -->
    <string name="dump_viewer">Thermal Dump Viewer</string>
    <string name="pick_mask">Pick Mask Image</string>
    <string name="export_csv">Export to CSV</string>
    <string name="unset_mask">Unset Mask Image</string>
    <string name="rotate_view">Rotate View</string>
    <string name="toggle_sim">Toggle SimulatedCam</string>
    <string name="settings">Settings</string>


    <!-- SettingsActivity -->
    <string name="app_version">App Version</string>
    <string name="auth_status">Auth Status</string>
    <string name="unauthenticated">Unauthenticated</string>
    <string name="user_brief">%1$s (%2$s)</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <!-- Sync -->
    <string name="sync_patient_list">Sync Patient List</string>
    <string name="sync_thermal_images">Sync Thermal Images</string>
    <string name="last_sync">Last sync: %1$s</string>
    <string name="never">never</string>
    <string name="sync">Sync</string>
    <string name="syncing">Syncing…</string>
    <string name="upload_conflict_syncing_patient">Image upload canceled due to conflict occurred when syncing current patient info.</string>

    <string name="auto_clear_spots">Auto Clear Spots</string>
    <string name="auto_clear_spots_dscrp">Auto clear thermal spots on camera disconnected.</string>
    <string name="auto_apply_visible_image_offset">Auto Apply Visible Image Offset</string>
    <string name="auto_apply_visible_image_offset_dscrp">Auto align visible light image with thermal image based on the last adjusted offset.</string>


    <!-- Dialogs -->
    <string name="continuous_shoot">Continuous Shoot</string>
    <string name="caseid">Case ID</string>
    <string name="bed">Bed</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="select">Select</string>
    <string name="interval">Period</string>
    <string name="captures">Captures</string>
    <string name="start">Start</string>
    <string name="confirm">Confirm</string>
    <string name="information">Information</string>
    <string name="error">Error</string>
    <string name="completed">Completed</string>

    <!-- UpdateReminderDialog -->
    <string name="new_version_available">New Version Available</string>
    <string name="current_version_">Current version: %1$s</string>
    <string name="new_version_">New version: %1$s</string>
    <string name="update">Update</string>
    <string name="ignore">Ignore</string>

    <!-- PatientMgmtDialog -->
    <string name="confirm_remove_patient">Confirm to remove records of %1$s?</string>
    <string name="error_both_bed_name_empty">Error: both name and bed are empty</string>

    <!-- TagSelectionDialog -->
    <string name="select_tags">Select Tags</string>
    <string name="no_tags_avail">No available tag, please connect to the Internet</string>

    <!-- PatientConflictDialog -->
    <string name="sync_patient_info">Sync Patient Info</string>
    <string name="conflict_found">Conflict found</string>
    <string name="local_patient_info">Local: &#160; %1$s &#160; %2$s (added: %3$s)</string>
    <string name="select_remote_merge">Select a merge target on remote: </string>
    <!--<string name="conflict_found_force_1">Merge is needed due to duplicate name &amp; bed / case id.</string>-->
    <!--<string name="conflict_found_force_2">Merge two patient records or disable sync of this patient?</string>-->
    <!--<string name="conflict_found_check">Merge two patient records or create a new one?</string>-->
    <string name="merge">Merge</string>
    <string name="keep_both">Keep both</string>
    <string name="cancel">Cancel</string>

    <!-- Messages -->
    <string name="error_occurred">Error occurred</string>
    <string name="invalid_input">Invalid input</string>

    <string name="no_network_access">No network access</string>
    <string name="login_failed">Login failed</string>
    <string name="login_failed_comm_err">Login failed: error communicating with server</string>
    <string name="please_login">Please login</string>

    <string name="write_storage_required">Write storage permission is necessary for image capturing.</string>
    <string name="insert_flirone">Please insert FLIR One and select %1$s</string>
    <string name="flirone_disconnected">FLIR One disconnected</string>
    <string name="connecting_sim">Connecting simulatedCam</string>
    <string name="dumped_">Dumped: %1$s</string>
    <string name="conti_shoot_starting">The first shot will be taken in %1$d seconds.</string>
    <string name="conti_shoot_blocking">Please abort continuous shooting before performing any other actions.</string>
    <string name="conti_shoot_confirm_abort">Abort continuous shooting?</string>
    <string name="conti_shoot_failed_report">Failed to trigger image capture, aborting continuous shooting.\nNumber of shoots: %1$d / %2$d</string>
    <string name="conti_shoot_finished_report">Continuous shooting finished.\nNumber of shoots: %1$d / %2$d</string>
    <string name="conti_shoot_tuning_skip">Skip taking shot: %1$d / %2$d due to device is tuning.</string>

    <string name="pick_thermal_images">Pick thermal dump files(*.dat) to visualize</string>
    <string name="spots_hidden">Thermal spots are now hidden, click "show spots" first.</string>
    <string name="colored_image_dumped">Colored image exported: %1$s</string>
    <string name="visible_image_dumped">%1$s Visible light image exported: %2$s</string>
    <string name="dump_failed">Dump failed</string>
    <string name="no_spot_to_copied">No spot to be copied</string>
    <string name="failed_extract_visible">Failed to extract visible light image</string>
    <string name="error_switch_dump_tab">Error occurred while switching dump tab</string>
    <string name="error_delete_flir">Error deleting thermal image file of dump</string>
    <string name="error_delete_color">Error deleting color image file of dump</string>
    <string name="error_delete_visible">Error deleting visible light image file of dump</string>
    <string name="error_delete_dump">Error deleting dump file</string>
    <string name="confirm_close_dump">Confirm to close %1$s tab?</string>
    <string name="confirm_delete_dump">Confirm to delete %1$s and related files?</string>

    <!-- SelectPatientDialog -->
    <string name="select_patient">Select Patient</string>

    <!-- DumpViewer -->
    <string name="visible">visible</string>
    <string name="color_image">color</string>
    <string name="thermal_chart">chart</string>
    <string name="delete">delete</string>
    <string name="menu">menu</string>

</resources>
