<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_dump_viewer"
        android:title="@string/dump_viewer"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_pick_mask"
        android:title="@string/pick_mask"
        app:showAsAction="never"/>

    <item
        android:id="@+id/export_csv"
        android:title="@string/export_csv"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_switch_rotate"
        android:title="@string/rotate_view"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_toggle_sim"
        android:title="@string/toggle_sim"
        app:showAsAction="never"/>

</menu>