<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    android:theme="@style/DialogTheme">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        style="@style/DialogCardView">

        <LinearLayout
            android:id="@+id/layoutParams"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dialog_title_margin_bottom"
                android:layout_marginTop="@dimen/dialog_title_margin_bottom"
                android:text="@string/new_version_available"
                android:textAlignment="center"
                android:textSize="@dimen/dialog_title_size"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtCurrentVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/current_version_"/>

            <TextView
                android:id="@+id/txtNewVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/new_version_"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnIgnore"
                    style="@style/DialogMetaButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ignore"
                    android:textColor="@color/metaButtonCancel"/>

                <Button
                    android:id="@+id/btnUpdate"
                    style="@style/DialogMetaButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
