<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@android:color/background_dark"
    android:orientation="vertical"
    tools:context=".PreviewActivity" android:keepScreenOn="true" android:id="@+id/topView"
    android:touchscreenBlocksFocus="false">

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:adjustViewBounds="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:scaleType="fitCenter"
        />

    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:id="@+id/fullscreen_content">
        <LinearLayout
            android:id="@+id/fullscreen_content_controls_top" style="@android:style/ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal" android:orientation="horizontal"
            tools:ignore="UselessParent"
            android:background="@color/black_overlay">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/battery_label"
                android:id="@+id/batteryLabelTextView"
                android:layout_margin="8dp"
                android:layout_weight="0"
                android:layout_gravity="left|center_vertical"
                style="?actionMenuTextAppearance"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/batteryChargeIndicator"
                android:layout_gravity="left|center_vertical"
                android:layout_weight="0"
                android:src="@android:drawable/ic_lock_idle_charging"
                android:tint="@color/accent_material_light"
                android:visibility="gone" />

            <TextView
                android:id="@+id/batteryLevelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_weight="0.5"
                android:text="--"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <View
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/btnDump"
                style="?metaButtonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dumpThermalRaw"
                android:onClick="onDumpThermalRawClicked"/>

            <Button
                android:layout_width="51dp" style="?metaButtonBarButtonStyle"
                android:layout_height="wrap_content"
                android:text="@string/performTuning"
                android:id="@+id/tuneButton"
                android:onClick="onTuneClicked" />

            <ToggleButton
                android:layout_width="47dp"
                android:layout_height="wrap_content"
                android:text="@string/rotate_on"
                android:id="@+id/switch_rotate"
                android:onClick="onRotateClicked"
                android:layout_gravity="right"
                android:textOff="@string/rotate_off"
                android:textOn="@string/rotate_on"
                style="?metaButtonBarButtonStyle" />


        </LinearLayout>
        <FrameLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            tools:ignore="UselessParent"
            android:columnCount="3"
            android:rowCount="1">

            <ToggleButton
                android:id="@+id/btnToggleMoreInfo"
                style="?metaButtonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:checked="true"
                android:onClick="onToggleMoreInfoClicked"
                android:textOff="@string/toggle_more_info"
                android:textOn="@string/toggle_less_info"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|bottom"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton"
                    style="?metaButtonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:onClick="onCaptureImageClicked"
                    android:src="@android:drawable/ic_menu_camera"/>

                <ImageButton
                    android:id="@+id/imgBtnAnalyze"
                    style="?metaButtonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onAnalyzeClicked"
                    android:src="@android:drawable/ic_menu_mapmode"/>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content" style="?metaButtonBarButtonStyle"
                android:layout_height="wrap_content"
                android:text="@string/connectSim"
                android:id="@+id/connect_sim_button"
                android:onClick="onConnectSimClicked"
                android:layout_gravity="bottom|end" />

        </FrameLayout>

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tuningProgressBar"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txtTuning"
            android:id="@+id/tuningTextView"
            android:labelFor="@id/tuningProgressBar"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Please Connect FLIR One"
            android:id="@+id/pleaseConnect"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"
            android:visibility="gone" />


    </FrameLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spotMeterIcon"
        android:layout_gravity="center"
        android:src="@android:drawable/ic_menu_mylocation"
        android:alpha="0.9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/spotMeterValue"
        android:layout_gravity="center"
        android:alpha="0.9"
        android:paddingTop="39dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="3"/>
</FrameLayout>
