<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    android:theme="@style/DialogTheme">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        style="@style/DialogCardView">

        <LinearLayout
            android:id="@+id/layoutParams"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_title_margin_bottom"
                android:layout_marginBottom="@dimen/dialog_title_margin_bottom"
                android:text="@string/select_tags"
                android:textAlignment="center"
                android:textSize="@dimen/dialog_title_size"
                android:textStyle="bold"/>

            <tw.cchi.medthimager.component.ScrollViewWithMaxHeight
                android:id="@+id/scrollPatientList"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:maxHeight="260dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerTagsList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/listitem_multi_selection"/>

            </tw.cchi.medthimager.component.ScrollViewWithMaxHeight>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    style="@style/DialogMetaButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="@color/metaButtonCancel"/>

                <Button
                    android:id="@+id/btnConfirm"
                    style="@style/DialogMetaButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
